--- a/index.html
+++ b/index.html
@@ -22,4 +22,8 @@
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
   </body>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+  </script>
 </html>
