--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
+      <button id="toggle-btn">Disconnect</button>
     </form>
   </body>
   <script src="/socket.io/socket.io.js"></script>
@@ -29,6 +30,7 @@
     const form = document.getElementById('form');
     const input = document.getElementById('input');
     const messages = document.getElementById('messages');
+    const toggleButton = document.getElementById('toggle-btn');
 
     form.addEventListener('submit', (e) => {
       e.preventDefault();
@@ -38,11 +40,30 @@
       }
     });
 
+    socket.on('connect', () => {
+      if (socket.recovered) {
+        console.log('recovered session');
+      } else {
+        console.log('new session');
+      }
+    });
+
     socket.on('chat message', (msg) => {
       const item = document.createElement('li');
       item.textContent = msg;
       messages.appendChild(item);
       window.scrollTo(0, document.body.scrollHeight);
+    });
+
+    toggleButton.addEventListener('click', (e) => {
+      e.preventDefault();
+      if (socket.connected) {
+        toggleButton.innerText = 'Connect';
+        socket.disconnect();
+      } else {
+        toggleButton.innerText = 'Disconnect';
+        socket.connect();
+      }
     });
   </script>
 </html>
