--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
   </body>
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
+    const socket = io({
+      auth: {
+        serverOffset: 0
+      }
+    });
 
     const form = document.getElementById('form');
     const input = document.getElementById('input');
@@ -40,19 +44,12 @@
       }
     });
 
-    socket.on('connect', () => {
-      if (socket.recovered) {
-        console.log('recovered session');
-      } else {
-        console.log('new session');
-      }
-    });
-
-    socket.on('chat message', (msg) => {
+    socket.on('chat message', (msg, serverOffset) => {
       const item = document.createElement('li');
       item.textContent = msg;
       messages.appendChild(item);
       window.scrollTo(0, document.body.scrollHeight);
+      socket.auth.serverOffset = serverOffset;
     });
 
     toggleButton.addEventListener('click', (e) => {
