--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
   </body>
   <script src="/socket.io/socket.io.js"></script>
   <script>
+    let counter = 0;
+
     const socket = io({
       auth: {
         serverOffset: 0
-      }
+      },
+      // enable retries
+      ackTimeout: 10000,
+      retries: 3,
     });
 
     const form = document.getElementById('form');
@@ -39,7 +44,9 @@
     form.addEventListener('submit', (e) => {
       e.preventDefault();
       if (input.value) {
-        socket.emit('chat message', input.value);
+        // compute a unique offset
+        const clientOffset = `${socket.id}-${counter++}`;
+        socket.emit('chat message', input.value, clientOffset);
         input.value = '';
       }
     });
